--- a/static/css/python-editor.css
+++ b/static/css/python-editor.css
@@ -88,7 +88,9 @@
 .split-layout {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
 }
 
 .editor-main {
